# pi4_aplicacoes_ciencia_de_dados

./: .gitignore  README.md  entregas.ipynb  pyproject.toml  requirements.txt  tabelas txt  visualizacao.py  visualizacaoV.py
contribuicoes/: tabelas_visual.py
dashboard/: charts.py  data.py
dashboard/pages/: 1_Clientes.py  2_Produtos.py  3_Lojas.py  4_Tendencias.py
data/: basic_queries.ipynb
src/: analysis.py  app.py  helpers.py  visualizations.py
