[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=5.24",
    "scikit-learn>=1.6.1",
    "streamlit>=1.40",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
